--- a/react-email/complete/forgot-password.hbs
+++ b/react-email/complete/forgot-password.hbs
@@ -112,7 +112,7 @@
                 We value your privacy and security. Please do not reply to this
                 email. If you need, you can<!-- -->
                 <a
-                  href="mailto:support@snowcap.pro"
+                  href="mailto:support@EventPilot.pro"
                   style="color: #067df7; text-decoration-line: none"
                   target="_blank"
                 >contact us here</a>. If you did not request a password reset,
