--- a/app/components/orgSelector/orgselector.module.css
+++ b/app/components/orgSelector/orgselector.module.css
@@ -4,9 +4,12 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  gap: 4px;
 }
 
 .orgrow img {
-  height: 24px;
-  transform: scale(1.3);
+  max-height: 24px;
+  max-width: 24px;
+  transform-origin: right;
+  border-radius: 4px;
 }
